<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/opcionFavoritos"
        android:icon="@drawable/heartblack"
        android:title="@string/favoritos" />


    <item
        android:id="@+id/opcionIdeas"
        android:icon="@drawable/opcionideas"
        android:title="@string/ideas" />

    <item
        android:id="@+id/opcionLiteratura"
        android:icon="@drawable/opcionliteratura"
        android:title="@string/literatura" />


    <item
        android:id="@+id/opcionFotografía"
        android:icon="@drawable/opcioncamara"
        android:title="@string/fotografía" />

    <item
        android:id="@+id/opcionAmerica"
        android:icon="@drawable/opcionamerica"
        android:title="@string/america" />

    <item
        android:id="@+id/opcionarquitectura"
        android:icon="@drawable/opcionarquitectura"
        android:title="@string/arquitectura" />
    <item
        android:id="@+id/opcionArtesEscenicas"
        android:icon="@drawable/opcionartesescenicas"
        android:title="@string/artes_esc_nicas" />

    <item
        android:id="@+id/opcionAudioVisuales"
        android:icon="@drawable/opcionaudiovisuales"
        android:title="@string/audiovisuales" />

    <item
        android:id="@+id/opcionBallet"
        android:icon="@drawable/opcionballet"
        android:title="@string/ballet" />
    <item
        android:id="@+id/opcionCineySeries"
        android:icon="@drawable/opcioncineyseries"
        android:title="@string/cine_y_series" />


</menu>